force-app/main/default/objects/Drawdown__c/fields/Conga_Funding_Summary_Report_View_All__c.field-meta.xml
<CustomField>
    <fullName>Conga_Funding_Summary_Report_View_All__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&quot;
&amp;&quot;&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_370
&amp;&quot;&amp;Id=&quot;&amp;Id

&amp;&quot;&amp;QueryId=[drawdowns]a0p0L00000KCw0xQAD%3Fpv0%3D&quot;&amp;Conga_Funding_Summary_Rpt_Start_Date__c&amp;&quot;~pv1%3D&quot;&amp;Conga_Funding_Summary_Rpt_End_Date__c &amp;&quot;~pv2%3D&quot; &amp; $Setup.Funding_Summary_Report__c.Business_Unit__c &amp;&quot;~pv3%3D&quot; &amp; $Setup.Funding_Summary_Report__c.Type_of_Loan__c

&amp;&quot;&amp;TemplateId=a0x0L00000Q3WXQQA3&quot;
&amp;&quot;&amp;DS7=3&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Funding Summary Report View All</label>
    <type>Text</type>
</CustomField>