force-app/main/default/objects/Drawdown__c/fields/Conga_Funding_Summary_Rpt_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Conga_Funding_Summary_Rpt_Business_Unit__c</fullName>
    <formula>$Setup.Funding_Summary_Report__c.Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Funding Summary Rpt Business Unit</label>
    <type>Text</type>
</CustomField>