force-app/main/default/objects/Drawdown__c/fields/Conga_Funding_Summary_Rpt_Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Conga_Funding_Summary_Rpt_Type_of_Loan__c</fullName>
    <formula>$Setup.Funding_Summary_Report__c.Type_of_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Funding Summary Rpt Type of Loan</label>
    <type>Text</type>
</CustomField>