force-app/main/default/objects/Drawdown__c/fields/Conga_Law_Firm_Count_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Conga_Law_Firm_Count_Business_Unit__c</fullName>
    <formula>$Setup.Conga_batch_setting__c.Business_Unit_Law_Firm_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Law Firm Count Business Unit</label>
    <type>Text</type>
</CustomField>