force-app/main/default/objects/Drawdown__c/fields/Conga_Law_Firm_Count_Type_of_Loans__c.field-meta.xml
<CustomField>
    <fullName>Conga_Law_Firm_Count_Type_of_Loans__c</fullName>
    <formula>$Setup.Conga_batch_setting__c.Type_of_Loan_Law_Firm_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Law Firm Count Type of Loans</label>
    <type>Text</type>
</CustomField>