force-app/main/default/objects/Drawdown__c/fields/Conga_Law_Firm_Sales_Summary_Print_All__c.field-meta.xml
<CustomField>
    <fullName>Conga_Law_Firm_Sales_Summary_Print_All__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&quot;&amp; 
&quot;&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_370&amp; 
&quot;&amp;Id=&quot;&amp;Id&amp; 
&quot;&amp;QueryId=[lawfirmsalessummaryp]a0p0L00000J8b86%3Fpv0%3D&quot;&amp;Conga_LawFirmSale_Summary_Rpt_Start_Date__c&amp;&quot;~pv1%3D&quot;&amp;Conga_LawFirmSale_Summary_Rpt_End_Date__c&amp;&quot;~pv2%3D&quot;&amp;IF( $Setup.Law_Firm_Sales_Summary_Report__c.Business_Unit__c = &apos;Consolidated&apos;,&apos;&apos;,$Setup.Law_Firm_Sales_Summary_Report__c.Business_Unit__c)
&amp; &quot;,[lawfirmsspayout]a0p0L00000JzH30%3Fpv0%3D&quot;&amp;Conga_LawFirmSale_Summary_Rpt_Start_Date__c&amp;&quot;~pv1%3D&quot;&amp;Conga_LawFirmSale_Summary_Rpt_End_Date__c&amp;&quot;~pv2%3D&quot;&amp;IF( $Setup.Law_Firm_Sales_Summary_Report__c.Business_Unit__c = &apos;Consolidated&apos;,&apos;&apos;,$Setup.Law_Firm_Sales_Summary_Report__c.Business_Unit__c)&amp;&quot;&amp;TemplateId=a0x0L00000PYIoF&amp;DS7=3&quot;</formula>
    <label>Conga Law Firm Sales Summary Print All</label>
    <type>Text</type>
</CustomField>