force-app/main/default/objects/Drawdown__c/fields/Conga_Lawyer_Count_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Conga_Lawyer_Count_Business_Unit__c</fullName>
    <formula>$Setup.Conga_batch_setting__c.Lawyer_Count_Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Lawyer Count Business Unit</label>
    <type>Text</type>
</CustomField>