force-app/main/default/objects/Drawdown__c/fields/Conga_Lawyer_Count_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Conga_Lawyer_Count_Loan_Type__c</fullName>
    <formula>$Setup.Conga_batch_setting__c.Lawyer_Count_Type_Of_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Lawyer Count Loan Type</label>
    <type>Text</type>
</CustomField>