force-app/main/default/objects/Drawdown__c/fields/Conga_Lawyer_Count_Rpt_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Conga_Lawyer_Count_Rpt_End_Date__c</fullName>
    <formula>TEXT( YEAR( $Setup.Conga_batch_setting__c.Lawyer_Count_End_Date__c ) ) &amp; &quot;-&quot; &amp; IF( MONTH( $Setup.Conga_batch_setting__c.Lawyer_Count_End_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot; ) &amp; TEXT( MONTH( $Setup.Conga_batch_setting__c.Lawyer_Count_End_Date__c ) ) &amp; &quot;-&quot; &amp; IF( DAY( $Setup.Conga_batch_setting__c.Lawyer_Count_End_Date__c ) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT( DAY( $Setup.Conga_batch_setting__c.Lawyer_Count_End_Date__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Lawyer Count Rpt End Date</label>
    <type>Text</type>
</CustomField>