force-app/main/default/objects/Drawdown__c/fields/Conga_Payment_Summary_Report_Print_All_4__c.field-meta.xml
<CustomField>
    <fullName>Conga_Payment_Summary_Report_Print_All_4__c</fullName>
    <formula>&quot;[otherlfpaymnts]a0p0L00000KDIisQAH%3F&quot;&amp;
&quot;pv0%3D&quot;&amp; Conga_Payment_Summary_Rpt_Start_Date__c&amp;
&quot;~pv1%3D&quot;&amp; Conga_Payment_Summary_Rpt_End_Date__c&amp;
&quot;~pv2%3D&quot;&amp; $Setup.Payment_Summary_Report__c.Business_Unit__c &amp; &quot;~pv3%3D&quot;&amp; $Setup.Payment_Summary_Report__c.Type_of_Loan__c &amp;&quot;,&quot;&amp;

&quot;[rebates]a0p0L00000KDIjCQAX%3F&quot;&amp;
&quot;pv0%3D&quot;&amp; Conga_Payment_Summary_Rpt_Start_Date__c&amp;
&quot;~pv1%3D&quot;&amp; Conga_Payment_Summary_Rpt_End_Date__c&amp;
&quot;~pv2%3D&quot;&amp; $Setup.Payment_Summary_Report__c.Business_Unit__c &amp; &quot;~pv3%3D&quot;&amp; $Setup.Payment_Summary_Report__c.Type_of_Loan__c &amp;&quot;,&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Payment Summary Report Print All 4</label>
    <type>Text</type>
</CustomField>