force-app/main/default/objects/Drawdown__c/fields/Conga_Payment_Summary_Report_View_All__c.field-meta.xml
<CustomField>
    <fullName>Conga_Payment_Summary_Report_View_All__c</fullName>
    <formula>&quot;/apex/APXTConga4__Conga_Composer?SolMgr=1&quot;&amp;
&quot;&amp;serverUrl=&quot;&amp;$Api.Partner_Server_URL_370&amp;
&quot;&amp;Id=&quot;&amp;Id&amp;

&quot;&amp;QueryId=[PaymentSummaryReport]a0p0L00000J8lUJ%3F&quot;&amp;
&quot;pv0%3D&quot;&amp;Conga_Payment_Summary_Rpt_Start_Date__c &amp;
&quot;~pv1%3D&quot;&amp;Conga_Payment_Summary_Rpt_End_Date__c&amp;
&quot;~pv2%3D&quot;&amp;IF($Setup.Payment_Summary_Report__c.Business_Unit__c == &#39;Consolidated&#39;, &#39;&#39;, $Setup.Payment_Summary_Report__c.Business_Unit__c)&amp;
&quot;&amp;TemplateId=a0x0L00000PYJVC&amp;DS7=3&quot;</formula>
    <label>Conga Payment Summary Report View All</label>
    <type>Text</type>
</CustomField>