force-app/main/default/objects/Drawdown__c/fields/Created_Month_Integer__c.field-meta.xml
<CustomField>
    <fullName>Created_Month_Integer__c</fullName>
    <formula>Text(YEAR( ( Date__c ))) + &apos; - &apos; + ( IF( MONTH( ( Date__c ) ) &lt; 10, &apos;0&apos;, &apos;&apos;)) + TEXT( MONTH( ( Date__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Month Integer</label>
    <type>Text</type>
</CustomField>