force-app/main/default/objects/Drawdown__c/fields/Data_Load_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_Identifier__c</fullName>
    <label>Data Load Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>