force-app/main/default/objects/Drawdown__c/fields/Date_of_Last_Repayment_b4_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Repayment_b4_Reserve_Date__c</fullName>
    <label>Date of Last Repayment b4 Reserve Date</label>
    <type>Date</type>
</CustomField>