force-app/main/default/objects/Drawdown__c/fields/Drawdown_Full_Number__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_Full_Number__c</fullName>
    <formula>IF(ISBLANK( Opportunity__r.Account.AccountNumber ), &#39;00000&#39;, LPAD(Opportunity__r.Account.AccountNumber, 5, &#39;0&#39;) ) + &#39;-&#39; + IF(ISBLANK( Opportunity__r.Loan_No__c ), &#39;00&#39;, LPAD(Opportunity__r.Loan_No__c, 2, &#39;0&#39;) ) + &#39;-&#39; + IF(ISBLANK(Drawdown_Number__c), &#39;00&#39;,LPAD(TEXT(Drawdown_Number__c), 2, &#39;0&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawdown Full Number</label>
    <type>Text</type>
</CustomField>