force-app/main/default/objects/Drawdown__c/fields/Drawdown_To_Reverse_Date__c.field-meta.xml
<CustomField>
    <fullName>Drawdown_To_Reverse_Date__c</fullName>
    <label>Drawdown To Reverse Date</label>
    <type>Date</type>
</CustomField>