force-app/main/default/objects/Drawdown__c/fields/EFT__c.field-meta.xml
<CustomField>
    <fullName>EFT__c</fullName>
    <label>EFT/Wire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>