force-app/main/default/objects/Drawdown__c/fields/from_external_database__c.field-meta.xml
<CustomField>
    <fullName>from_external_database__c</fullName>
    <defaultValue>false</defaultValue>
    <label>from_external_database</label>
    <type>Checkbox</type>
</CustomField>