force-app/main/default/objects/Drawdown__c/fields/Has_Interest__c.field-meta.xml
<CustomField>
    <fullName>Has_Interest__c</fullName>
    <formula>NOT(OR( ISPICKVAL(Reference_Notes__c,&quot;Referral Fee&quot;),
ISPICKVAL(Reference_Notes__c,&quot;Refund&quot;),
ISPICKVAL(Reference_Notes__c,&quot;Payment Re-processed&quot;),
ISPICKVAL(Payment_Method__c, &apos;Payment&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Interest</label>
    <type>Checkbox</type>
</CustomField>