force-app/main/default/objects/Drawdown__c/fields/Include_in_Drawdown_wo_Payment_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Drawdown_wo_Payment_Rollup__c</fullName>
    <formula>IF(AND(NOT(ISPICKVAL(Payment_Method__c, &apos;Payment&apos;)), NOT(OR(ISPICKVAL(Reference_Notes__c, &apos;Payment Rejected&apos;),ISPICKVAL(Reference_Notes__c, &apos;Payment Re-processed&apos;),ISPICKVAL(Reference_Notes__c, &apos;Referral Fee&apos;)))), True,  IF(ISPICKVAL(Reference_Notes__c, &apos;Payment Halted&apos;), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Drawdown w/o Payment Rollup</label>
    <type>Checkbox</type>
</CustomField>