force-app/main/default/objects/Drawdown__c/fields/Include_in_Payments_Sum__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Payments_Sum__c</fullName>
    <formula>AND(ISPICKVAL(Payment_Method__c,&apos;Payment&apos;),OR ( ISPICKVAL(Reference_Notes__c, &apos;Loan Payout&apos;),ISPICKVAL(Reference_Notes__c, &apos;Partial Payment&apos;), ISPICKVAL(Reference_Notes__c, &apos;Payment Surplus&apos;), ISPICKVAL(Reference_Notes__c, &apos;Bad Debt Recovery&apos;), ISPICKVAL(Reference_Notes__c, &apos;Client Rebate&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Payments Sum</label>
    <type>Checkbox</type>
</CustomField>