force-app/main/default/objects/Drawdown__c/fields/Include_in_Portfolio_Reports__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Portfolio_Reports__c</fullName>
    <formula>OR( Accrued_Interest_In_Reporting_Period__c &gt; 0,
     Outstanding_Balance_as_of_To_Date__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for Portfolio Reports - If anything interest is Accrued in the reporting period or there&apos;s a balance outstanding, include the Drawdown in the report.</inlineHelpText>
    <label>Include in Portfolio Reports</label>
    <type>Checkbox</type>
</CustomField>