force-app/main/default/objects/Drawdown__c/fields/Include_in_Principal__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Principal__c</fullName>
    <formula>AND(OR(ISPICKVAL( Payment_Method__c , &apos;Admin Fee&apos;), ISPICKVAL( Payment_Method__c , &apos;Cheque&apos;), ISPICKVAL( Payment_Method__c , &apos;e-Transfer&apos;), ISPICKVAL( Payment_Method__c , &apos;Other&apos;)),  NOT(ISPICKVAL(Reference_Notes__c, &apos;Refund&apos;)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Principal</label>
    <type>Checkbox</type>
</CustomField>