force-app/main/default/objects/Drawdown__c/fields/Interest_Accrual_Days_Pymt_to_Temp_Dt__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual_Days_Pymt_to_Temp_Dt__c</fullName>
    <formula>IF((Interest_End_Date_Temp_Date__c-Interest_Start_Date_Temp_Date__c)&lt;0,0,(Interest_End_Date_Temp_Date__c-Interest_Start_Date_Temp_Date__c)+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between Interest Start and End on which interest accrues. This has been adjusted for prior payments, minimum interest duration, and deferred interest.</inlineHelpText>
    <label>Interest Accrual (Days) Pymt to Temp Dt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>