force-app/main/default/objects/Drawdown__c/fields/Interest_Accrual_Days_to_Reserve_Dt__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual_Days_to_Reserve_Dt__c</fullName>
    <formula>IF(Is_Reserve_Applied__c, IF((Interest_End_Date_Reserve_Date__c-Interest_Start_Date_Reserve_Date__c)&lt;0,0,(Interest_End_Date_Reserve_Date__c-Interest_Start_Date_Reserve_Date__c)+1), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Accrual (Days) to Reserve Dt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>