force-app/main/default/objects/Drawdown__c/fields/Interest_Accrual_Years_to_Reserve_Dt__c.field-meta.xml
<CustomField>
    <fullName>Interest_Accrual_Years_to_Reserve_Dt__c</fullName>
    <formula>Interest_Accrual_Days_to_Reserve_Dt__c/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Accrual (Years) to Reserve Dt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>